# OneWayFrameFingerprint

./: .gitignore  ChangeLog.md  LICENSE  OneWayFrameFingerprint  OneWayFrameFingerprint.cabal  README.md  cabal.sandbox.config  hosts  server_install.sh
analysis/: main.py
analysis/Run 1/: main.py
analysis/Run 2/: data2pickle.py  errorellipse.py  main.py  separa_log_por_dia.py  separa_paths.py  teste.out
analysis/Run 3/: data2pickle.py  main.py  main_agrupators.py  temp-plot.html
analysis/python-daemons 1/: main.py  tempo_maquina_para_comparacao.txt
cpuinfo/: losangeles.cpuinfo  quebec.cpuinfo
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell-daemon-udp/: OneWayFrameFingerprint  OneWayFrameFingerprint.cabal  README.md  cabal.sandbox.config  servers.txt  servers.txt~
haskell-daemon-udp/src/: ChangeLog.md  Main.hs  syslogtcpserver.hs
lib/: Common.hs
python-daemons/: client.py  common.py  server.py  servers.txt
python-daemons/logs/: client_TRABALHO-FLAVIO_TRABALHO  server_TRABALHO-FLAVIO_TRABALHO
src/: ChangeLog.md  Client.hs  Client0.hs  Main.hs  Server.hs  Shared.hs  syslogtcpclient.hs  syslogtcpserver.hs
