cabal-version:       3.0

name:                OneWayFrameFingerprint
version:             0.2.0.0
synopsis:            Experiment
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              flaviobb
maintainer:          flavio.borges.botelho@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

common shared-properties
  default-language: Haskell2010
  build-depends:       base >=4.9,
                       network >= 2.6,
                       network-info >= 0.2,
                       hostname >= 1.0,
                       bytestring >= 0.10,
                       clock >= 0.7,
                       formatting >= 6.3,
                       time >= 1.8,
                       dns >= 3.0.4,
                       iproute >= 1.7.6,
                       network-info >= 0.2,
                       containers >= 0.5.7,
                       fast-logger >= 2.4.12,
                       process >= 1.6.5,
                       cassava >= 0.5.0,
                       vector >= 0.12,
                       network-bsd >= 2.7
  ghc-options:
    -Wall
  other-modules: Shared


executable OneWayFrameFingerprintClient
  import:              shared-properties
  main-is:             Client.hs
  hs-source-dirs:      src/
  ghc-options:         -Wall -O2 -threaded -with-rtsopts=-N -main-is Client

executable OneWayFrameFingerprintServer
  import:              shared-properties
  main-is:             Server.hs
  hs-source-dirs:      src/
  ghc-options:         -Wall -O2 -threaded -with-rtsopts=-N -main-is Server
